--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/assets/svelte.svg" />
+  <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hyper chat App</title>
   %sveltekit.head%
