--- a/src/app.html
+++ b/src/app.html
@@ -27,6 +27,7 @@
     body {
       height: 100vh;
       width: 100vw;
+      max-width: 100%;
       margin: 0;
       padding: 0;
       overflow: auto;
